# agents-startups-company-experiment

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
experiments/experiment_example/: context_final.json  context_idea_development.json  context_pitch.json  context_prototyping.json  statistics.json
experiments/experiment_example/prototype/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
experiments/experiment_example/prototype/backend/: requirements.txt
experiments/experiment_example/prototype/frontend/: package.json  tailwind.config.js
frontend/: package.json  playwright.config.ts  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/: design-images.spec.ts  experiments.spec.ts  home.spec.ts  navigation.spec.ts  skeleton-components.spec.ts  tests.spec.ts
src/ainnovators/: __init__.py  config.py  orchestrator.py
src/ainnovators/agents/: __init__.py  base_agent.py  ceo.py  designer.py  developer.py  legal_advisor.py  marketer.py  qa.py  researcher.py  tech_writer.py
src/ainnovators/context/: __init__.py  observer.py  shared_context.py
src/ainnovators/services/: __init__.py
src/ainnovators/stages/: __init__.py  documentation.py  idea_development.py  prototyping.py
src/ainnovators/utils/: __init__.py  agent_tester.py  docker_manager.py  experiment_logger.py  extractors.py  gemini_client.py  pricing.py  stage_logger.py  statistics.py  validators.py  web_search.py
tests/: __init__.py  test_ceo_agent.py  test_designer_agent.py  test_researcher_agent.py
(+44 files in other folders)
